Opened 5 years ago

Closed 4 years ago

Last modified 4 years ago

#15726 closed bug (fixed)

[ICNSTranslator] crashes in compareTypes

Reported by: diver Owned by: nobody
Priority: normal Milestone: R1/beta3
Component: Add-Ons/Translators/ICNS Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Opening haiku/data/artwork/VolumeIcon.icns in ShowImage crashes ICNSTranslator.

Debug information for team /boot/system/apps/ShowImage (3448):
CPU(s): 2x Intel Core™ i7-3635QM
Memory: 1.46 GiB total, 426.54 MiB used
Haiku revision: hrev53888 Feb 18 2020 07:03:20 (x86_64)

Active Threads:
	thread 3448: ShowImage (main)
	thread 3452: w>ShowImage: Open 
	thread 3456: w>Progress monitor 
	thread 3458: team 3448 debug task 
	thread 3457: image loader 
		state: Exception (Segment violation)

		Frame		IP			Function Name
		-----------------------------------------------
		0x7fc45f1e5b00	0x15948ce7e2d	compareTypes(void const*, void const*) + 0xd 
			Disassembly:
				compareTypes(void const*, void const*):
				0x0000015948ce7e20:               55  push %rbp
				0x0000015948ce7e21:           4889e5  mov %rsp, %rbp
				0x0000015948ce7e24:               53  push %rbx
				0x0000015948ce7e25:         4883ec48  sub $0x48, %rsp
				0x0000015948ce7e29:             8b06  mov (%rsi), %eax
				0x0000015948ce7e2b:             8b17  mov (%rdi), %edx
				0x0000015948ce7e2d:             8b18  mov (%rax), %ebx <--

			Frame memory:
				[0x7fc45f1e5aa0]  .b._.....\._....   18 62 1e 5f c4 7f 00 00 00 5c 1e 5f c4 7f 00 00
				[0x7fc45f1e5ab0]  .Z._............   f0 5a 1e 5f c4 7f 00 00 00 80 07 f6 f9 01 00 00
				[0x7fc45f1e5ac0]  8...............   38 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00
				[0x7fc45f1e5ad0]  ........@.......   00 00 00 00 00 00 00 00 40 cc 07 f6 f9 01 00 00
				[0x7fc45f1e5ae0]  ........x9......   00 00 00 00 00 00 00 00 78 39 15 f6 f9 01 00 00
				[0x7fc45f1e5af0]  .[._.....T.8+...   90 5b 1e 5f c4 7f 00 00 dd 54 8b 38 2b 02 00 00
		0x7fc45f1e5ba0	0x22b388b54db	qsort.localalias.2 + 0x5eb 
		0x7fc45f1e5bf0	0x15948ce8633	ICNSLoader::ICNSLoader(BPositionIO*) + 0x163 
		0x7fc45f1e5c80	0x15948ce78c6	ICNSTranslator::DerivedIdentify(BPositionIO*, translation_format const*, BMessage*, translator_info*, unsigned int) + 0x66 
		0x7fc45f1e5cf0	0x15948ce91d3	BaseTranslator::BitsIdentify(BPositionIO*, translation_format const*, BMessage*, translator_info*, unsigned int) + 0xe3 
		0x7fc45f1e60b0	0xd63f1a2037	BTranslatorRoster::Private::Identify(BPositionIO*, BMessage*, unsigned int, char const*, unsigned int, translator_info*) + 0x157 
		0x7fc45f1e6550	0x10d7b3f070f	ImageCache::_RetrieveImage(QueueEntry*, CacheEntry**) + 0x1af 
		0x7fc45f1e65f0	0x10d7b3f0cbb	ImageCache::_QueueWorkerThread(void*) + 0x9b 
		0x7fc45f1e6610	0x22b3883af67	thread_entry + 0x17 
		00000000	0x7fc285943260	commpage_thread_exit + 0

Change History (2)

comment:1 by 3dEyes, 4 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev54550

Last edited 4 years ago by pulkomandy (previous) (diff)

comment:2 by nielx, 4 years ago

Milestone: UnscheduledR1/beta3

Assign fix to milestone:R1/beta3, as it looks like this fix will be part of that release.

As we started with the previous beta, we would like to use the Milestone field for fixed tickets to log from which release the improvement will be out. Therefore it is very much appreciated to assign the milestone when closing a ticket as fixed.

Note: See TracTickets for help on using tickets.