ICNSTranslator: Fix bug #15726

Change-Id: Ie1db106f40b1f4214e1798d3a8cbd22193bf4bfa